--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wrapit",
-  "version": "0.0.2-1",
+  "version": "0.0.3",
   "description": "web server for wrapping files (like js files) in a header and footer (like a require call)",
   "bin": {
     "wrapit": "./bin/wrapit"
@@ -31,6 +31,6 @@
     "start": "./bin/wrapit"
   },
   "engines": {
-    "node": "0.6.x"
+    "node": ">=0.6.x"
   }
 }
