--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wrapit",
-  "version": "0.0.4",
+  "version": "0.0.4-1",
   "description": "web server for wrapping files (like js files) in a header and footer (like a require call)",
   "bin": {
     "wrapit": "./bin/wrapit"
